--- a/static/css/s3.css
+++ b/static/css/s3.css
@@ -5,15 +5,15 @@
    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
    :root {
-     --bg:      #050810;
-     --bg2:     #030508;
+     --bg:     #2c2e31; 
+     --bg2:    #232527;
      --card:    #0a0f1f;
-     --card2:   #080c1a;
-     --border:  #1a2040;
-     --border2: #101828;
-     --accent:  #39ff14;
-     --accent2: #f7c948;
-     --accent3: #39b4ff;
+     --card2:  #1f2123;
+     --border: #3a3c40;
+     --border2 :#303235;
+     --accent:  #e2b714;
+     --accent2:#e2b714;
+     --accent3:#e2b714;
      --text:    #e0e8ff;
      --text2:   #8090b0;
      --text3:   #3a4a6a;
@@ -21,7 +21,7 @@
      --wrong:   #ff3939;
      --font:    'VT323', monospace;
      --glow:    rgba(57,255,20,0.4);
-     --radius:  0px;
+     --radius:  4px;
      --bar-h:   6px;
      --max-w:   720px;
    }
